首页页面展示

--- a/fglai/index.html
+++ b/fglai/index.html
@@ -35,21 +35,21 @@
         	描述：底部信息
         -->
 		<nav class="mui-bar mui-bar-tab">
-		  <a class="mui-tab-item mui-active" href="#tabbar">
-				<span class="mui-icon mui-icon-phone"></span>
-				<span class="mui-tab-label">电话咨询</span>
+		  <a class="mui-tab-item mui-active" href="#">
+				<span class="mui-icon mui-icon-home"></span>
+				<span class="mui-tab-label">首页</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-chat">
-				<span class="mui-icon mui-icon-chat"></span>
-				<span class="mui-tab-label">在线咨询</span>
+			<a class="mui-tab-item" href="#">
+				<span class="mui-icon mui-icon-star"></span>
+				<span class="mui-tab-label">理财中心</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-sms">
-				<span class="mui-icon mui-icon-sms"></span>
-				<span class="mui-tab-label">短信咨询</span>
+			<a class="mui-tab-item" href="#">
+				<span class="mui-icon mui-icon-person"></span>
+				<span class="mui-tab-label">用户中心</span>
 			</a>
-			<a class="mui-tab-item" href="#tabbar-with-map">
-				<span class="mui-icon mui-icon-map"></span>
-				<span class="mui-tab-label">查看地图</span>
+			<a class="mui-tab-item" href="#">
+				<span class="mui-icon mui-icon-more"></span>
+				<span class="mui-tab-label">更多..</span>
 			</a>
 		</nav>
 		<script src="js/mui.min.js"></script>
