页面切换更改为单模板模式

--- a/fglai/index.html
+++ b/fglai/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
 	    <title></title>
 	    <script src="js/mui.min.js"></script>
 	    <link href="css/mui.min.css" rel="stylesheet"/>
-	    <script type="text/javascript" charset="utf-8">
-	      	mui.init({
-	      		subpages:[{
-			      url:"page/indexContent.html",//子页面HTML地址，支持本地地址和网络地址
-			      id:"listcontent",//子页面标志
-			      styles:{
-			        top:'45px',//mui标题栏默认高度为45px；
-        			bottom:'45px'//默认为0px，可不定义；
-			      }
-			    }]
-	      	});
-	    </script>
 	</head>
 	<body>
 		<header class="mui-bar mui-bar-nav">
@@ -53,5 +42,156 @@
 			</a>
 		</nav>
 		<script src="js/mui.min.js"></script>
+		<script type="text/javascript">
+			var menu = null,
+			main = null;
+			var showMenu = false;
+			mui.init({
+				swipeBack: false,
+				gestureConfig: {
+					doubletap: true
+				},
+	      		subpages:[{
+	      		  url:"page/indexContent.html",
+//			      url:"page/indexContent.html",//子页面HTML地址，支持本地地址和网络地址
+			      id:"listcontent",//子页面标志
+			      styles:{
+			        top:'45px',//mui标题栏默认高度为45px；
+        			bottom:'45px',//默认为0px，可不定义；
+					bounce: 'vertical'
+			      }
+			    }]
+	      	});
+			 
+			mui.plusReady(function() {
+				//仅支持竖屏显示
+				plus.screen.lockOrientation("portrait-primary");
+				main = plus.webview.currentWebview();
+				main.addEventListener('maskClick', closeMenu);
+				//处理侧滑导航，为了避免和子页面初始化等竞争资源，延迟加载侧滑页面；
+				setTimeout(function() {
+					menu = mui.preload({
+						id: 'index-menu',
+						url: 'index-menu.html',
+						styles: {
+							left: 0,
+							width: '70%',
+							zindex: -1
+						},
+						show: {
+							aniShow: 'none'
+						}
+					});
+				}, 200);
+			});
+			
+			
+			var isInTransition = false;
+			/**
+			 * 显示侧滑菜单
+			 */
+			function openMenu() {
+				if (isInTransition) {
+					return;
+				}
+				if (!showMenu) {
+					//侧滑菜单处于隐藏状态，则立即显示出来；
+					isInTransition = true;
+					menu.setStyle({
+						mask: 'rgba(0,0,0,0)'
+					}); //menu设置透明遮罩防止点击
+					menu.show('none', 0, function() {
+						//主窗体开始侧滑并显示遮罩
+						main.setStyle({
+							mask: 'rgba(0,0,0,0.4)',
+							left: '70%',
+							transition: {
+								duration: 150
+							}
+						});
+						mui.later(function() {
+							isInTransition = false;
+							menu.setStyle({
+								mask: "none"
+							}); //移除menu的mask
+						}, 160);
+						showMenu = true;
+					});
+				}
+			};
+			/**
+			 * 关闭菜单
+			 */
+			function closeMenu() {
+				if (isInTransition) {
+					return;
+				}
+				if (showMenu) {
+					//关闭遮罩；
+					//主窗体开始侧滑；
+					isInTransition = true;
+					main.setStyle({
+						mask: 'none',
+						left: '0',
+						transition: {
+							duration: 200
+						}
+					});
+					showMenu = false;
+					//等动画结束后，隐藏菜单webview，节省资源；
+					mui.later(function() {
+						isInTransition = false;
+						menu.hide();
+					}, 300);
+				}
+			};
+			
+			 //敲击顶部导航，内容区回到顶部
+			document.querySelector('header').addEventListener('doubletap', function() {
+				main.children()[0].evalJS('mui.scrollTo(0, 100)');
+			});
+			 //主界面向右滑动，若菜单未显示，则显示菜单；否则不做任何操作
+			window.addEventListener("swiperight", openMenu);
+			 //主界面向左滑动，若菜单已显示，则关闭菜单；否则，不做任何操作；
+			window.addEventListener("swipeleft", closeMenu);
+			 //侧滑菜单触发关闭菜单命令
+			window.addEventListener("menu:close", closeMenu);
+			window.addEventListener("menu:open", openMenu);
+			 //重写mui.menu方法，Android版本menu按键按下可自动打开、关闭侧滑菜单；
+			mui.menu = function() {
+					if (showMenu) {
+						closeMenu();
+					} else {
+						openMenu();
+					}
+				}
+				//处理右上角关于图标的点击事件；
+			var subWebview = null,
+				template = null;
+			
+			
+			 //首页返回键处理
+			 //处理逻辑：1秒内，连续两次按返回键，则退出应用；
+			var first = null;
+			mui.back = function() {
+				if (showMenu) {
+					closeMenu();
+				} else {
+					//首次按键，提示‘再按一次退出应用’
+					if (!first) {
+						first = new Date().getTime();
+						mui.toast('再按一次退出应用');
+						setTimeout(function() {
+							first = null;
+						}, 1000);
+					} else {
+						if (new Date().getTime() - first < 1000) {
+							plus.runtime.quit();
+						}
+					}
+				}
+			};
+			
+		</script>
 	</body>
 </html>
